\name{NEWS}
\title{News for Package \pkg{frenchFISH}}