@@ -2,9 +2,9 @@ context("Testing manual spot counting correction")
 
 cell_radius = 8
 section_height = 4
-manual_counts = data.frame(red = c(0, 2, 4),
-                           green = c(5, 3, 1),
-                           blue = c(3, 0, 2))
+manual_counts = cbind(red = c(0, 2, 4),
+                      green = c(5, 3, 1),
+                      blue = c(3, 0, 2))
 manual_counts_estimates <- getManualCountsEstimates(manual_counts, cell_radius, section_height)
 
 test_that("getManualCountsEstimates function works", {
@@ -27,16 +27,16 @@ test_that("getManualCountsEstimates function throws error messages when input ar
   expect_error(getManualCountsEstimates(automatic_counts, 8, NA), "height must be numeric")
   expect_error(getManualCountsEstimates(automatic_counts, -8, 4), "radius must be greater than 0")
   expect_error(getManualCountsEstimates(automatic_counts, 8, -4), "height must be greater than 0")
-  expect_error(getManualCountsEstimates("probeCounts", 8, 4), "probeCounts must be a dataframe")
-  expect_error(getManualCountsEstimates(5, 8, 4), "probeCounts must be a dataframe")
-  expect_error(getManualCountsEstimates(data.frame(), 8, 4), "probeCounts must have at least one column")
-  #expect_error(getManualCountsEstimates(data.frame(red=c(NA)), 8, 4), "probeCounts cannot have any NA or NaN values")
-  #expect_error(getManualCountsEstimates(data.frame(red=c(NaN)), 8, 4), "probeCounts cannot have any NA or NaN values")
-  #expect_error(getManualCountsEstimates(data.frame(red=c(Inf)), 8, 4), "probeCounts cannot have any Inf or -Inf values")
-  expect_error(getManualCountsEstimates(data.frame(red=c(-Inf)), 8, 4), "probeCounts cannot have any Inf or -Inf values")
-  expect_error(getManualCountsEstimates(data.frame(red=c(1.5)), 8, 4), "All non-NA/NaN counts in probeCounts must be non-negative integers")
-  expect_error(getManualCountsEstimates(data.frame(red=c(-1)), 8, 4), "All non-NA/NaN counts in probeCounts must be non-negative integers")
-  expect_error(getManualCountsEstimates(data.frame(red=c(-1.5)), 8, 4), "All non-NA/NaN counts in probeCounts must be non-negative integers")
-  expect_warning(getManualCountsEstimates(data.frame(red=c(0)), 8, 4), "All non-NA/NaN counts of red probe are 0. Estimated count for this probe may not be accurate")
-  expect_warning(getManualCountsEstimates(data.frame(red=c(NA)), 8, 4), "All counts of red probe are NA or NaN. Estimated count will be NA")
+  expect_error(getManualCountsEstimates("probeCounts", 8, 4), "probeCounts must be a matrix")
+  expect_error(getManualCountsEstimates(5, 8, 4), "probeCounts must be a matrix")
+  expect_error(getAutomaticCountsEstimates(matrix(NA, nrow = 0, ncol = 0), 8, 4), "probeCounts must have at least one row")
+  #expect_error(getManualCountsEstimates(cbind(red=c(NA)), 8, 4), "probeCounts cannot have any NA or NaN values")
+  #expect_error(getManualCountsEstimates(cbind(red=c(NaN)), 8, 4), "probeCounts cannot have any NA or NaN values")
+  #expect_error(getManualCountsEstimates(cbind(red=c(Inf)), 8, 4), "probeCounts cannot have any Inf or -Inf values")
+  expect_error(getManualCountsEstimates(cbind(red=c(-Inf)), 8, 4), "probeCounts cannot have any Inf or -Inf values")
+  expect_error(getManualCountsEstimates(cbind(red=c(1.5)), 8, 4), "All non-NA/NaN counts in probeCounts must be non-negative integers")
+  expect_error(getManualCountsEstimates(cbind(red=c(-1)), 8, 4), "All non-NA/NaN counts in probeCounts must be non-negative integers")
+  expect_error(getManualCountsEstimates(cbind(red=c(-1.5)), 8, 4), "All non-NA/NaN counts in probeCounts must be non-negative integers")
+  expect_warning(getManualCountsEstimates(cbind(red=c(0)), 8, 4), "All non-NA/NaN counts of red probe are 0. Estimated count for this probe may not be accurate")
+  expect_warning(getManualCountsEstimates(cbind(red=c(NA)), 8, 4), "All counts of red probe are NA or NaN. Estimated count will be NA")
 })
