@@ -50,24 +50,25 @@ in situ hybridisation of tissue sections
 
 ## Adjusting automatically counted spots
 
-First, let's simulate a dataframe with rows for nuclear blobs and columns for 
-three different color probes (red, blue, and green). Entries in the dataframe 
+First, let's simulate a matrix with rows for nuclear blobs and columns for 
+three different color probes (red, blue, and green). Entries in the matrix 
 will be the number of FISH spots of that column's probe that were 
 automatically counted for that row's blob. The first row specifies the area 
 of each nuclear blob as given by the automatic spot counting software:
 
 ```{r readin_autocounts}
-automatic_counts = data.frame(area = round(runif(20,150,500), 2), 
-                              red = round(runif(20,0,5), 0), 
-                              green = round(runif(20,0,5), 0), 
-                              blue = round(runif(20,0,5), 0))
+automatic_counts = cbind(area = round(runif(20,150,500), 2), 
+                         red = round(runif(20,0,5), 0), 
+                         green = round(runif(20,0,5), 0), 
+                         blue = round(runif(20,0,5), 0))
 ```
 
 Once the count matrix has been created, we can run frenchFISH to quantify the 
 copy number of each probed region by both correcting for nuclear volume 
 correction and implementing a  homogenous Poisson Point Process model. In 
 addition to our count matrix, we include a cell radius and the height of 
-our tissue section:
+our tissue section (which should be modified as appropriate depending on the
+cell type and section height you are using):
 
 ```{r correct_autocounts}
 cell_radius = 8
@@ -87,17 +88,17 @@ print(corrected_automatic_counts)
 
 ## Adjusting manually counted spots
 
-Next, let's simulate a dataframe of spot counts that have been manually 
+Next, let's simulate a matrix of spot counts that have been manually 
 counted for the same three color probes. Note that this time, no area column 
 is included as a first column:
 
 ```{r readin_manualcounts}
-manual_counts = data.frame(red = round(runif(20,0,5), 0), 
-                           green = round(runif(20,0,5), 0), 
-                           blue = round(runif(20,0,5), 0))
+manual_counts = cbind(red = round(runif(20,0,5), 0), 
+                      green = round(runif(20,0,5), 0), 
+                      blue = round(runif(20,0,5), 0))
 ```
 
-To adjust these spot counts using frenchFISH, we simply input this dataframe, 
+To adjust these spot counts using frenchFISH, we simply input this matrix, 
 along with the cell radius and section height into the 
 getManualCountsEstimates function:
 
