@@ -1,2 +1,8 @@
-\name{NEWS}
+\name{frenchFISHnews}
 \title{News for Package \pkg{frenchFISH}}
+\encoding{UTF-8}
+
+\section{Version 0.99.4}{\itemize{
+\item
+Changed accepted input data structure for area probe counts from a dataframe to a matrix.
+}}
